# wrap-integrations

./: .drone.yml  .gitignore  README.md  package-lock.json
.github/workflows/: ci.yaml  console-ci.yaml  ens-ci.yaml  near-ci.yaml  substrate-cd.yaml  substrate-ci.yaml  substrate-publish-test-docker-image.yaml  system-ci.yaml  tezos-ci.yaml  uniswapV2-ci.yaml  uniswapv3-ci.yaml
console/wrapper/: README.md  package.json
documentation/: .gitignore  docusaurus.config.js  package.json  tsconfig.json
documentation/docs/: intro.md
documentation/scripts/: gen-docs.ts  utils.ts
ens/wrapper/: package.json  web3api.yaml
ethers-solidity/: .eslintrc.js  README.md  package.json  schema.graphql
ethers-solidity/src/: index.ts  resolvers.ts
ethersSolidity/: package.json
ethgasprices/: package.json  web3api.yaml
http/wrapper/: README.md  (+1 more)
httpdemo/: README.md  package.json
near/: Near Polywrapper Specification.md
protocol/ethereum/wrapper/: Cargo.toml  package.json  polywrap.build.yaml  polywrap.yaml  run.sh  schema.graphql
protocol/ethereum/wrapper/src/: api.rs  format.rs  lib.rs  mapping.rs  provider.rs  resolvers.rs  signer.rs  task.rs  utils.rs
protocol/ethereum/wrapper/tests/: e2e.simple.spec.ts  e2e.spec.ts
protocol/ethereum/wrapper/tests/types/: polywrap.plugin.yaml
protocol/ipfs/async-uri-resolver/wrapper-ipfs-uri-resolver/: Cargo.toml  package.json  polywrap.build.yaml  polywrap.yaml
protocol/ipfs/async-uri-resolver/wrapper-ipfs-uri-resolver/src/: schema.graphql
protocol/ipfs/async-uri-resolver/wrapper-ipfs-uri-resolver/src/__tests__/simple-wrapper/: package.json
protocol/ipfs/async-uri-resolver/wrapper-ipfs-uri-resolver/src/__tests__/utils/: config.ts  infra.ts
protocol/ipfs/async-uri-resolver/wrapper-ipfs-uri-resolver/src/util/: exec.rs
protocol/ipfs/ipfs-wrapper/: Cargo.toml  package.json  polywrap.yaml
protocol/ipfs/ipfs-wrapper/src/: lib.rs  schema.graphql
protocol/ipfs/ipfs-wrapper/src/__tests__/: index.test.ts
protocol/ipfs/ipfs-wrapper/src/util/: exec.rs  mod.rs  options.rs
protocol/substrate/core-wrapper/examples/forum-app/: Cargo.toml  package.json  polywrap.app.yaml  schema.graphql  serve.sh
protocol/substrate/core-wrapper/examples/forum-app/src/: lib.rs
protocol/substrate/core-wrapper/module/: Cargo.toml  build.sh  schema.graphql
protocol/substrate/core-wrapper/module/src/: api.rs  lib.rs  types.rs  utils.rs
protocol/substrate/core-wrapper/module/src/api/: balance_api.rs  base_api.rs  constant_api.rs  extrinsic_api.rs  storage_api.rs
protocol/substrate/core-wrapper/module/src/types/: account_info.rs  extrinsic_params.rs  extrinsics.rs  metadata.rs  storage.rs
protocol/substrate/examples/forum-app/: Cargo.toml  Notes.md  README.md  index.html  index.ts  package.json  serve.sh  signer.ts  style.css  webpack.config.js
protocol/substrate/examples/forum-app/src/: api.rs  client.rs  content.rs  error.rs  extrinsic.rs  fetch.rs  lib.rs  util.rs
protocol/substrate/examples/forum-app/src/content/: comment.rs  post.rs
protocol/substrate/examples/seed-content/: Cargo.toml  index.html  index.ts  package.json  signer.ts
protocol/substrate/examples/seed-content/src/: lib.rs
protocol/substrate/examples/substrate-node-template/pallets/forum/: Cargo.toml
protocol/substrate/examples/substrate-node-template/pallets/forum/src/: lib.rs  lib.rs~
protocol/substrate/rpc-wrapper/: .gitignore  Cargo.toml  DEMO.md  README.md  deployment.json  jest.config.js  package.json  polywrap.deploy.yaml  polywrap.infra.yaml  polywrap.yaml  schema.graphql  tsconfig.json
protocol/substrate/rpc-wrapper/module/: Cargo.toml  schema.graphql
protocol/substrate/rpc-wrapper/module/src/: api.rs  lib.rs  utils.rs
protocol/substrate/rpc-wrapper/module/src/api/: balance_api.rs  base_api.rs  constant_api.rs  extrinsic_api.rs  storage_api.rs
protocol/substrate/rpc-wrapper/module/src/types/: account_info.rs  extrinsic_params.rs  extrinsics.rs  storage.rs
protocol/substrate/rpc-wrapper/src/: encoding.rs  error.rs  lib.rs  utils.rs
protocol/substrate/rpc-wrapper/src/__tests__/: e2e.spec.ts  mockExtension.ts  polywrap.app.yaml
protocol/substrate/rpc-wrapper/src/api/: base_api.rs  constant_api.rs  extrinsic_api.rs  mod.rs  storage_api.rs
protocol/substrate/rpc-wrapper/src/types/: account_info.rs  extrinsic.rs  extrinsic_params.rs  extrinsics.rs  metadata.rs  mod.rs  storage.rs
protocol/substrate/rpc-wrapper/test-env/: docker-compose.yml
protocol/substrate/rpc-wrapper/tests/: e2e.spec.ts  mockExtension.ts  schema.graphql
resolvers/ens-text-record-resolver/: Cargo.toml  deployment.json  jest.config.js  package.json  polywrap.yaml
resolvers/ens-text-record-resolver/src/: lib.rs  schema.graphql
resolvers/ens-text-record-resolver/src/__tests__/e2e/: integration.spec.ts
substrate/core-wrapper/module/: Cargo.toml
system/graph-node/wrapper/: Cargo.toml  README.md  config.ts  deployment.json  jest.config.js  package.json  polywrap.build.yaml  polywrap.yaml
system/graph-node/wrapper/src/: lib.rs  schema.graphql
system/graph-node/wrapper/src/__tests__/: e2e.spec.ts
system/sha3/wrapper/: Cargo.toml  README.md  deployment.json  package.json  polywrap.build.yaml  polywrap.yaml
system/sha3/wrapper/src/: lib.rs  schema.graphql
system/sha3/wrapper/src/__tests__/: index.test.ts
system/uts46-lite/wrapper/: Cargo.toml  README.md  deployment.json  jest.config.js  package.json  polywrap.build.yaml  polywrap.deploy.yaml  polywrap.yaml
system/uts46-lite/wrapper/src/: lib.rs  schema.graphql
system/uts46-lite/wrapper/src/__tests__/: index.test.ts
system/uts46-lite/wrapper/src/__tests__/types/: polywrap.app.yaml  schema.graphql
system/uts46/wrapper/: Cargo.toml  README.md  package.json  polywrap.build.yaml  polywrap.yaml
system/uts46/wrapper/src/: lib.rs  schema.graphql
system/uts46/wrapper/src/__tests__/: index.test.ts
system/uts46/wrapper/src/__tests__/types/: polywrap.app.yaml  schema.graphql
uniswapv2/: .eslintrc.js  integrations.md  package.json  tsconfig.ts.json
uniswapv3/: .eslintrc.js  as-pect.config.js  web3api.build.yaml
(+1521 files in other folders)
