[package]
name = "module"
version = "0.1.0"
description = "Module of Ethereum polywrapper"
authors = [
  "Nestor Amesty <nestor@dorg.tech>"
]
repository = "https://github.com/polywrap/monorepo"
license = "MIT"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
async-trait = "0.1.57"
polywrap-wasm-rs = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.64", default-features = false, features = ["raw_value"] }
ethers-providers = { version = "0.17.0", features = [] }
ethers-core = { version = "0.17.0", features = [] }
ethers-contract = { version = "0.17.0", features = [] }
futures = "0.3.24"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
