[package]
name = "substrate-rpc-wrapper"
version = "0.0.1"
description = "The core wrapper implementation for polywrap for substrate base chain"
authors = [
  "Jovansonlee Cesar (ChainSafe) <ivanceras@gmail.com>",
  "Willem Olding (ChainSafe) <willem@chainsafe.io>"
]
repository = "https://github.com/polywrap/integrations"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
polywrap-wasm-rs = { version = "0.9.4" }
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["custom"], default-features = false }
log = "0.4"
serde_json = "1"
hex = "0.4.3"
thiserror = "1.0.30"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
scale-info = { version = "2.0.1" }
frame-metadata = { version = "15.0.0", features = ["v14"] }
delegate = "0.7.0"

# If this 2 substrate crate can be incorporated into the code (used in base_api mod), then the rest should follow
sp-core = { version = "6.0.0", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate", tag = "monthly-2022-10" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2022-10" }
sp-version = { version = "5.0.0", default-features = false, features = ["serde", "impl-serde", "std"], git = "https://github.com/paritytech/substrate", tag = "monthly-2022-10" }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2022-10" }
num-traits = "0.2.15"

[features]
default = []
wrap-invoke = []
std = [
 "sp-core/std",
 "sp-runtime/std",
 "sp-version/std",
 "sp-std/std",
]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
