[package]
name = "substrate-core-wrapper"
version = "0.0.1"
description = "TODO"
authors = [
  "TODO <todo@todo.com>"
]
repository = "https://todo.com"
edition = "2021"

[dependencies]
web3api-wasm-rs = { version = "0.0.1-prealpha.82" }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
