[package]
name = "sha3-wasm-rs"
version = "0.4.0"
description = "SHA3 Polywrap Wasm wrapper"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/integrations"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.4.0" }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.2"
hex = "0.4.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
