[package]
name = "uts46-lite-wasm-rs"
version = "0.4.0"
description = "A Polywrap Wasm wrapper for uts46 operations"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/monorepo"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.4.1" }
serde = { version = "1.0", features = ["derive"] }
unic-idna = "0.9.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
