[package]
name = "uts46-wasm-rs"
version = "0.1.0"
description = "A Polywrap Wasm wrapper for uts46 operations"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/monorepo"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
unic-idna = "0.9.0"
regex = { version = "1.6.0", default-features = false, features=["std", "perf-dfa", "perf-inline"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
