[package]
name = "ipfs-uri-resolver-rs"
version = "0.1.0"
description = "A Polywrap Wasm wrapper for resolving WRAP URIs with the IPFS authority"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/monorepo"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.10.0-pre.3" }
serde = { version = "1.0", features = ["derive"] }
cid = "0.8.6"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
