[package]
name = "substrate-core-wrapper"
version = "0.0.1"
description = "TODO"
authors = [
  "TODO <todo@todo.com>"
]
repository = "https://todo.com"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
polywrap-wasm-rs = { version = "0.0.1-prealpha.90" }
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["custom"] }
log = "0.4"
serde_json = "1"
hex = "0.4.3"
thiserror = "1.0.30"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
scale-info = { version = "2.0.1" }
frame-metadata = { version = "15.0.0", features = ["v14"] }

# If this 2 substrate crate can be incorporated into the code (used in base_api mod), then the rest should follow
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { version = "5.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keyring = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = []
wrap-invoke = []
std = [
 "sp-core/std",
 "sp-runtime/std",
 "sp-version/std",
 "sp-std/std",
]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
